--- a/visionSamples/FaceTracker/app/src/main/res/values/strings.xml
+++ b/visionSamples/FaceTracker/app/src/main/res/values/strings.xml
@@ -5,6 +5,6 @@
     <string name="no_camera_permission">This application cannot run because it does not have the camera permission.  The application will now exit.</string>
     <string name="low_storage_error">Face detector dependencies cannot be downloaded due to low device storage</string>
 
-    <string name="app_name">oishi</string>
+    <string name="app_name">OISHI</string>
     <string name="facebook_app_id">437435489752556</string>
 </resources>
